hphp/hack/test/pocket_universes/typing/tpu_access.bad.php.exp
File "tpu_access.bad.php", line 12, characters 35-47:
In this:@E:@A:@T, member A is neither an atom nor a generic type parameter (Naming[2110])
